Se organizan las estructuras de archivos y nombramientos de variables para cumplir el estandar

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-MONGODB_URL="mongodb://root_api:api12345@localhost:27017"
+# mongo DB
+MONGODB_ADMIN_USERNAME:root_api
+MONGODB_ADMIN_PASSWORD:api12345
+MONGO_DATABASE:my_collections
+
+# mongo express
+BASICAUTH_USERNAME:web_admin
+BASICAUTH_PASSWORD:admin12345
